--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eventemitter3": "^5.0.1",
     "express": "^5.1.0",
     "globals": "^16.0.0",
+    "react-router": "^7.6.1",
     "tsup": "^8.5.0",
     "tsx": "^4.19.4",
     "typescript": "~5.8.3",
