Supports zooming cameras from joystick screen

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "daisyui": "^5.0.38",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.7"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -32,7 +31,11 @@
     "eventemitter3": "^5.0.1",
     "express": "^5.1.0",
     "globals": "^16.0.0",
+    "react-joystick-component": "^6.2.1",
     "react-router": "^7.6.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.7",
     "tsup": "^8.5.0",
     "tsx": "^4.19.4",
     "typescript": "~5.8.3",
